--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "msalyhu_portfolio",
+  "name": "Book List",
   "version": "1.0.0",
   "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,6 +28,5 @@
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
-  },
-  "type": "module"
+  }
 }
